--- a/App.css
+++ b/App.css
@@ -1,7 +1,13 @@
+html {
+  /* 영문이면 roboto가 적용되고, 한글이면 Noto Sans KR가 적용되도록 아래와 같은 순서로 배치 */
+  font-family: "Roboto", "Noto Sans KR", sans-serif;
+}
+
+/* 노말라이즈 */
 * {
   box-sizing: border-box;
-  padding: 0px;
-  margin: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -15,14 +21,26 @@ li {
   color: inherit;
 }
 
+body {
+  background-color: #a6c0d5;
+}
+
 button {
   cursor: pointer;
   outline: none;
   border: none;
 }
 
-body {
-  background-color: #a6c0d5;
+.btn {
+  background-color: #fbe400;
+  padding: 10px 40px;
+  margin: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 20px;
+  border-radius: 5px;
+  box-shadow: grey 2px 2px 4px;
+  width: 100%;
 }
 
 .main-app {
@@ -31,25 +49,14 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 480px;
+  width: 400px;
   margin: 0px auto;
-}
-
-.btn {
-  background-color: #fbe400;
-  color: #000;
-  font-weight: bold;
-  font-size: 18px;
-  padding: 10px 40px;
-  margin-top: 20px;
-  border-radius: 5px;
-  box-shadow: grey 2px 2px 4px;
 }
 
 .progress-bar {
   width: 100%;
-  background-color: #fff;
   height: 30px;
+  background-color: white;
   border-radius: 12px;
 }
 
@@ -57,10 +64,8 @@ body {
   background-color: #fbe400;
   height: 30px;
   border-radius: 12px;
-  width: 50px;
 }
 
 .image-box {
   margin-top: 60px;
-  margin-bottom: 60px;
 }
