--- a/App.css
+++ b/App.css
@@ -4,18 +4,21 @@ html {
 }
 
 /* 노말라이즈 */
-body,
-ul,
-li,
-h1 {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  list-style: none;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul,
+li {
+  list-style: none;
+  color: inherit;
 }
 
 body {
@@ -28,43 +31,49 @@ button {
   border: none;
 }
 
-.main-App {
+.btn {
+  background-color: #fbe400;
+  padding: 10px 40px;
+  margin: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  margin-top: 20px;
+  border-radius: 5px;
+  box-shadow: grey 2px 2px 4px;
+  width: 100%;
+}
+
+.main-app {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   width: 400px;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 
-.btn {
+.progress-bar {
   width: 100%;
-  height: 50px;
-  font-weight: bold;
-  font-size: 14px;
-  margin-top: 40px;
-  background-color: #fbe400;
-  border-radius: 5px;
-  padding: 10px 40px;
-  box-shadow: grey 2px 2px 4px;
-}
-
-.percent-Bar {
-  width: 400px;
   height: 30px;
-  border-radius: 5px;
   background-color: white;
-  margin-bottom: 50px;
+  border-radius: 12px;
 }
 
-.percent-Bar > .percent {
-  width: 20%;
-  height: 30px;
-  border-radius: 5px;
+.percent {
   background-color: #fbe400;
+  height: 30px;
+  border-radius: 12px;
 }
 
 .image-box {
   margin-top: 60px;
+}
+
+.result-img-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
